Downgrade to JDK 1.8